--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "history": "^4.6.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.2",
+    "react-router-redux": "next",
     "react-scripts": "1.0.10",
     "redux": "^3.7.2",
+    "redux-devtools-dock-monitor": "^1.1.2",
+    "redux-devtools-log-monitor": "^1.3.0",
     "redux-thunk": "^2.2.0",
     "styled-components": "^2.1.1"
   },
