--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "react-router-dom": "^4.1.2",
     "react-router-redux": "next",
     "react-scripts": "1.0.10",
+    "react-transition-group": "1.x",
     "redux": "^3.7.2",
     "redux-devtools-dock-monitor": "^1.1.2",
     "redux-devtools-log-monitor": "^1.3.0",
     "redux-thunk": "^2.2.0",
+    "slug": "^0.9.1",
     "styled-components": "^2.1.1"
   },
   "scripts": {
