--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "date-fns": "^1.28.5",
     "history": "^4.6.3",
-    "prop-types": "^15.5.10",
     "querystringify": "^1.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
@@ -26,16 +25,29 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint:css": "stylelint './src/components/*.js'",
+    "lint:js": "eslint --cache src/ --ext .js",
+    "lintfix:js": "eslint --fix src/ --ext .js",
+    "flow": "flow",
+    "flow:stop": "flow stop",
+    "deploy": "react-scripts build && cd build && now --public"
   },
   "devDependencies": {
     "babel-eslint": "7.2.3",
     "eslint": "3.19.0",
-    "eslint-config-react-app": "^1.0.5",
+    "eslint-config-standard": "^10.2.1",
     "eslint-plugin-flowtype": "2.33.0",
     "eslint-plugin-import": "2.2.0",
     "eslint-plugin-jsx-a11y": "5.0.1",
+    "eslint-plugin-node": "^5.1.1",
+    "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "7.0.1",
-    "redux-devtools": "^3.4.0"
+    "eslint-plugin-standard": "^3.0.1",
+    "flow-bin": "^0.52.0",
+    "redux-devtools": "^3.4.0",
+    "stylelint": "^8.0.0",
+    "stylelint-config-standard": "^17.0.0",
+    "stylelint-processor-styled-components": "^0.2.1"
   }
 }
