--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "eslint-plugin-react": "7.0.1",
     "eslint-plugin-standard": "^3.0.1",
     "flow-bin": "^0.52.0",
+    "react-test-renderer": "^15.6.1",
     "redux-devtools": "^3.4.0",
+    "redux-mock-store": "^1.2.3",
     "stylelint": "^8.0.0",
     "stylelint-config-standard": "^17.0.0",
     "stylelint-processor-styled-components": "^0.2.1"
